# mirabel

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  fly.toml
.github/workflows/: fly-deploy.yml
src/: main.rs
src/api/: response.rs
src/api/routes/: books.rs
src/db/: mod.rs
src/entities/: books.rs  mod.rs  prelude.rs
src/error/: mod.rs
src/model/: books.rs  books_api.rs  mod.rs
src/server/: cors.rs  mod.rs
