[package]
name = "mirabel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"

# Axum
axum = "0.7.5"

# DB
futures = "0.3.30"
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json", "with-uuid" ] }
uuid = { version = "1.10.0", features = ["v4"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"